# CppBlankProject

./: .clang-format  .gitignore  .toolsharerc  README.md  default_launch.json  spatialos.json  worker_create.sh  
.buildkite/: premerge.definition.yaml  premerge.steps.yaml
ci/: Dockerfile  build.sh  spatial  spatial.cmd
dependencies/: CMakeLists.txt
schema/: CMakeLists.txt  blank.schema  sample.schema
snapshots/: default.json  default.snapshot  default.txt
workers/Managed/: CMakeLists.txt  build.json  cmake_configure.sh  spatialos.Managed.worker.json  spatialos_worker_packages.json
workers/Managed/src/: FakeOp.h  MockConnection.cpp  MockConnection.h  MockDispatcher.cpp  MockDispatcher.h  MockableConnection.cpp  MockableConnection.h  MockableConnectionWrapper.cpp  MockableConnectionWrapper.h  MockableDispatcher.cpp  MockableDispatcher.h  MockableDispatcherWrapper.cpp  MockableDispatcherWrapper.h  mockable_connection.cpp  startup.cc
